@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 7a40c4c96c28a96b56eb871cef907ac7b857f2d0 ChangeLog
+SHA1 3e8649fa5a2069bdc6b83002adb65c19523e8033 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 076b96a40ee3e10d1bee150578c53821e00014c0 MANIFEST
-SHA1 a804704807e6897f3c9b4e6a82f416b99a136423 META.yml
-SHA1 effdc6c11dac1d6b9a576456c55775842471a88d Makefile.PL
+SHA1 6964ef769e0764674138f3467010b9bca0f126db META.yml
+SHA1 89cb39b356724a5465ffc4ed4ceb53e757da8df4 Makefile.PL
 SHA1 fd7990a8a2e6a3211e92195eea930d61fb490eaa README
 SHA1 56058fc8d72a96f1cb02917fdf636c1abb94e51d bin/fullauto.pl
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -33,7 +33,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 a052436d873675ea0767e6a19d54318365f6ddfb lib/Net/FullAuto.pm
+SHA1 25ec4e6cf8c67342dc09490a90c0a1430df19ed0 lib/Net/FullAuto.pm
 SHA1 5ff6ce13b0ff87967726e71d0ef53ba0b3884ba7 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 1c547d9c70bbd223abf6d28018ca47076501063a lib/Net/FullAuto/Custom/README
 SHA1 11062399629ac5a8c01071ec2c876c79091f2482 lib/Net/FullAuto/Distro/fa_code.pm
@@ -47,7 +47,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAkz2makACgkQdsVAdUjO9Ink+gCeIOVXMrBDdyFs0i+oqDeO8zC9
-sxkAn3XPSiBXrYOlJI4sJUDflFRhA6uT
-=hCbC
+iEYEARECAAYFAkz2yzAACgkQdsVAdUjO9Ikh0QCeKxSZcO83xufaKO15AWMyK9oa
+ASsAnAsTBtyReR2Cmml78j3aVcjfalJA
+=gxst
 -----END PGP SIGNATURE-----
